# opt-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  publish.sh  pyproject.toml
.github/workflows/: publish.yml  test.yml
api/: Cargo.toml  README.md  pyproject.toml
api/examples/: a_optimise.py  b_build.py  c_coordinates.py  metallocage.xyz
dev/: README.md  build_mac_wheels.sh
examples/: README.md  a_optimise.py  b_build.py  build.py  c_coordinates.py  optimise.py
src/: atoms.rs  cli.rs  coordinates.rs  lib.rs  main.rs  molecule.rs  pairs.rs  utils.rs
src/common/: Makefile  logo.key  theory.tex
src/common/angles/: harmonic_b.py
src/common/inversion/: Makefile  fit_inversion_potential.py
src/connectivity/: angles.rs  bonds.rs  dihedrals.rs  mod.rs  traits.rs
src/ff/: angles.rs  bonds.rs  derivatives.py  dihedrals.rs  forcefield.rs  mod.rs  nonbonded.rs
src/ff/rb/: core.rs  mod.rs
src/ff/uff/: atom_types.rs  atom_types.txt  atom_typing.rs  core.rs  dihedral_bond.rs  generate_atom_types.py  inversion_centers.rs  mod.rs
src/io/: mod.rs  xyz.rs
src/opt/: mod.rs  sd.rs
