[project]
name = "optrs"
version = "0.1.1"
authors = [
  { name="Tom Young" },
]
description = "Molecular molecule optimization with forcefields"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Rust",
]

[project.urls]
"Homepage" = "https://github.com/t-young31/opt-rs"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
strip = true
release = true
