[package]
name = "optrs"
version = "0.1.0"
edition = "2021"
authors = ["Tom Young"]

[lib]
path = "../src/lib.rs"
name = "optrs"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
log = "0.4"
rand = "0.8.5"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
