[project]
name = "optrs-api"
version = "0.1.1"
requires-python = ">=3.6"
dependencies = [
    "optrs",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
strip = true
release = true
